# dialectic

./: .gitignore  .socratic-shell-review.json  CLAUDE.md  IPC_IMPLEMENTATION_REVIEW.md  README.md  book.toml  checkpoint_comment.md  diagram-enlarger.js  dialectic.code-workspace  guidance.md  package-lock.json  package.json  synthetic-pr-implementation-plan.md  test-registry-manual.md  test-rust-server.js  test-synthetic-pr-e2e.md  test-synthetic-pr-ipc.js  test-terminal-registry.js
.github/workflows/: ci.yml
.socratic-shell/: .commit-stamp
extension/: .vscodeignore  package-lock.json  package.json
extension/src/: bus.ts  commentController.ts  dialecticUrl.ts  extension.ts  fileNavigation.ts  reviewProvider.ts  reviewWebview.ts  searchEngine.ts  syntheticPRProvider.ts  syntheticPRTreeProvider.ts  walkthroughWebview.ts
md/: SUMMARY.md  faq.md  installation.md  introduction.md  quick-start.md  review-format.md  walkthrough-presentation.md  walkthroughs.md
md/design/: ai-guidance.md  ai-guidelines.md  ask-socratic-shell.md  build-and-test.md  code-walkthroughs.md  dialect-language.md  extension.md  ide-capabilities.md  implementation-phases.md  markdown-rendering.md  mcp-server.md  mcp-tool-interface.md  overview.md  present-review.md  protocol.md  review-format.md  synthetic-pr.md  terminal-registry.md  walkthrough-format.md
md/references/: vscode-extensions-dev-pattern.md
scripts/: dist.js  setup-common.js  setup-dev.js  setup.js
server/: .gitignore  Cargo.toml  README.md  dialectic-mcp-server-0.1.0.tgz  jest.config.js  package-lock.json  package.json  test-mcp-server.js  test-tool.js
server-rs/: Cargo.toml
server-rs/src/: ipc.rs  main.rs  server.rs
server-rs/tests/: integration_tests.rs
server/src/: daemon.rs  dialect.rs  ide.rs  index.ts  ipc.rs  ipc.ts  jsonscript.rs  lib.rs  main.rs  pid_discovery.rs  reference_store.rs  server.rs  types.rs  types.ts  validation.ts  walkthrough_parser.rs
server/src/__tests__/: ipc.test.ts  types.test.ts  validation.test.ts
server/src/dialect/: parser.rs
server/src/ide/: test.rs
server/src/jsonscript/: ambiguity.rs
server/src/synthetic_pr/: mcp_tools.rs
server/tests/: daemon_integration_tests.rs  integration_tests.rs  manual_process_test.rs  synthetic_pr_integration_test.rs
setup/src/: main.rs
