[package]
name = "dialectic-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of Dialectic MCP server for code review integration"
authors = ["Niko Matsakis"]
license = "MIT"

[lib]
name = "dialectic_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "dialectic-mcp-server"
path = "src/main.rs"

[dependencies]
# Official MCP SDK
rmcp = { workspace = true }

# JSON serialization
serde = { workspace = true }
serde_json = { workspace = true }

# JSON Schema support for MCP tools
schemars = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Async utilities
futures = "0.3"

# UUID generation for IPC message tracking
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = { workspace = true }
# Add client feature for testing
rmcp = { version = "0.3.2", features = ["server", "transport-io", "schemars", "client"] }
